--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -4,7 +4,7 @@
   border-radius: 20px;
   display: flex;
   flex-direction: column;
-  height: 315px;
+  height: 375px;
   justify-content: center;
   margin: 5px 10px;
   padding: 10px 5px;
@@ -20,6 +20,10 @@
 .product-image {
   height: 150px;
   width: 150px;
+}
+
+.free-shipping-image {
+  width: 100px;
 }
 
 .product-price {
