--- a/src/styles/cardStyles.css
+++ b/src/styles/cardStyles.css
@@ -26,7 +26,7 @@ h2 {
 }
 
 .card:hover {
-  box-shadow: 0px 2px 5px rgba(12, 6, 12, 0.507);
+  box-shadow: 0 2px 5px rgba(12, 6, 12, 0.507);
 }
 
 .add-to-cart-button {
