--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
+.minus, .plus {
+  background: none;
+  border: none;
+  color: inherit;
+  cursor: pointer;
+  font: inherit;
+  outline: inherit;
+  padding: 0;
+}
+
+button:disabled {
+  cursor: not-allowed;
+}
+
+.plus {
+  margin-left: 10px;
+}
+
 .App {
   text-align: center;
 }
@@ -53,6 +71,29 @@ a {
 
 .categoryContainer button + button {
   margin-top: 4px;
+}
+
+.shoppingCart {
+  display: inline;
+  position: relative;
+}
+
+.shoppingCart svg {
+  z-index: 0;
+}
+
+.cartCount {
+  align-items: center;
+  background-color: red;
+  border-radius: 50%;
+  display: flex;
+  height: 20px;
+  justify-content: center;
+  position: absolute;
+  right: -10px;
+  top: -20px;
+  width: 20px;
+  z-index: 1;
 }
 
 @keyframes App-logo-spin {
