--- a/src/style.css
+++ b/src/style.css
@@ -53,12 +53,22 @@ body {
   padding: 10px 25px;
 }
 
-.categories-list ul {
-  list-style: none;
+.categories-list select {
+  border: 1px solid #344;
+  border-radius: 100px;
+  font-family: Open Sans, sans-serif;
+  font-size: 14px;
+  outline: none;
+  padding: 2px 10px;
+  transition: all 0.25s ease;
 }
 
-.categories-list ul li {
-  line-height: 1.75em;
+.categories-list select:hover {
+  border-color: #7d9100;
+}
+
+.loading-text {
+  font-size: 14px;
 }
 
 /*
@@ -112,6 +122,38 @@ body {
 */
 
 .sec-products {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
   margin-top: 10px;
   width: 800px;
+}
+
+/*
+---CARD---
+*/
+
+.product-card {
+  align-items: center;
+  border-radius: 10px;
+  box-shadow: 0px 0px 2px rgba(125, 145, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+  transition: all 0.25s ease;
+  width: 200px;
+}
+
+.product-card:hover {
+  box-shadow: 0px 2px 4px rgba(125, 145, 0, 0.4);
+}
+
+.product-card h3 {
+  font-family: Quicksand, sans-serif;
+  font-size: 14px;
 }
