--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,14 @@
   display: inline-flex;
   margin-left: 5px;
 }
-
+.cartlist-section {
+  display: flex;
+  flex-direction: column;
+}
+.cartlist-itens {
+  display: inline-flex;
+  border: 1px solid black
+}
 .container {
   display: flex;
 }
