lint:styles fixes

--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,17 @@
   display: inline-flex;
   margin-left: 5px;
 }
+
 .cartlist-section {
   display: flex;
   flex-direction: column;
 }
+
 .cartlist-itens {
+  border: 1px solid black;
   display: inline-flex;
-  border: 1px solid black
 }
+
 .container {
   display: flex;
 }
