--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,3 +1,9 @@
-.nav {
-  margin: 0 5px;
+.color-white {
+  color: white;
+}
+
+.query-button {
+  background: none;
+  border: none;
+  padding: 0;
 }
