--- a/src/components/CartProductCard/styles.module.css
+++ b/src/components/CartProductCard/styles.module.css
@@ -4,7 +4,8 @@
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
   display: flex;
   justify-content: space-between;
-  margin-bottom: 10px;
+  margin: 0 auto 10px;
+  max-width: 1000px;
   padding: 20px;
 }
 
