--- a/src/components/ProductCard/styles.module.css
+++ b/src/components/ProductCard/styles.module.css
@@ -6,7 +6,9 @@
   display: flex;
   flex-direction: column;
   margin: 10px;
+  overflow: hidden;
   padding: 20px;
+  position: relative;
   width: 250px;
 }
 
@@ -18,9 +20,33 @@
 }
 
 .productCardImage {
+  width: 100%;
+}
+
+.freeShipping {
+  align-items: center;
+  background-color: rgba(50, 228, 50, 0.582);
+  color: white;
+  display: flex;
+  font-size: 20px;
+  height: 20%;
+  justify-content: center;
+  position: absolute;
+  right: -22%;
+  text-align: center;
+  text-shadow: 0 0 4px rgba(0, 0, 0);
+  top: 18%;
+  transform: rotateZ(45deg);
+  width: 100%;
+}
+
+.imageWrapper {
   border-radius: 50%;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  display: flex;
   margin: 30px 0;
+  overflow: hidden;
+  position: relative;
   width: 80%;
 }
 
