--- a/src/components/ProductsReviewItem/styles.module.css
+++ b/src/components/ProductsReviewItem/styles.module.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
-  padding: 10px;
+  padding: 10px 20px;
 }
 
 .thumbnail {
@@ -22,4 +22,16 @@
 
 .price {
   padding: 10px;
+  text-align: right;
+  width: 120px;
+}
+
+.quantity {
+  border-radius: 50%;
+  font-weight: 600;
+  margin: 0 20px;
+  min-width: 50px;
+  opacity: 0.9;
+  padding: 10px 15px;
+  text-align: right;
 }
