--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,32 @@
-.App {
-  text-align: center;
+.CartLink {
+  display: flex;
+  width: 40px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.CartLogo {
+  width: 100%;
 }
 
-@media ( prefers-reduced-motion : no-preference ) {
-
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-
+.CategoryButton {
+  display: inline-flex;
+  padding: 3px;
+  margin: 3px;
+  width: 180px;
+  height: 30px;
+  border-style: inset;
+  justify-content: center;
 }
 
-.App-header {
-  align-items: center;
-  background-color: #282c34;
-  color: white;
+.ItemCard {
   display: flex;
   flex-direction: column;
-  font-size: calc(10px + 2vmin);
-  justify-content: center;
-  min-height: 100vh;
+  height: 300px;
+  width: 250px;
+  border-style: groove;
+  align-items: center;
+  margin: 5px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+.ItemCard img {
+  width: 50%;
 }
