--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -7,3 +7,15 @@
   border: none;
   padding: 0;
 }
+
+.navbar-toggler {
+  display: none;
+}
+
+
+@media only screen and ( max-width : 600px ) {
+
+  .navbar-toggler {
+    display: flex;
+  }
+}
