--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   position: relative;
 }
 
-.header-container img {
+.header-container div {
   margin: 10px;
   position: absolute;
   right: 0;
@@ -103,6 +103,20 @@ a {
   background: rgb(79, 134, 15);
 }
 
+.cart-container {
+  border: solid 1.5px rgb(24, 22, 22);
+  float: right;
+  position: relative;
+  width: 50px;
+}
+
+.cart-container p {
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 0;
+}
+
 .cart-list-items {
   font-size: 10px;
   margin: 20px;
@@ -131,4 +145,15 @@ a {
 
 .quantity-header {
   width: 100px;
+}
+
+
+.free {
+  background: yellow;
+  color: red;
+  font-weight: 900;
+  opacity: 0.7;
+  padding: 5px;
+  position: absolute;
+  transform: rotate(-45deg);
 }
