--- a/src/App.scss
+++ b/src/App.scss
@@ -115,6 +115,7 @@ textarea {
       align-items: center;
 
       // border: 1px solid blue;
+
       .shopping-logo {
         width: auto;
         height: 80px;
@@ -148,7 +149,8 @@ textarea {
       border: 0;
       justify-content: flex-end;
       align-items: center;
-      background-color: $primary-bg-color;
+      background-color: rgba(255, 255, 255, 0);
+      // border: 1px solid red;
 
       &:hover {
         cursor: pointer;
@@ -176,6 +178,24 @@ textarea {
       }
     }
   }
+}
+
+.anim-move {
+  animation: spin 0.3s linear infinite;
+
+  @keyframes spin {
+    0% {
+      transform: scale(1, 1);
+    }
+
+    50% {
+      transform: scale(1.05, 1.05);
+    }
+
+    100% {
+      transform: scale(1, 1);
+    }
+  }   
 }
 
 // ------------------------------------------------------------
