--- a/src/components/ButtonCart.css
+++ b/src/components/ButtonCart.css
@@ -1,3 +1,7 @@
+.link-cart {
+  text-decoration: none;
+}
+
 .cart-button {
   color: white;
   font-size: 50px;
@@ -5,4 +9,17 @@
   position: absolute;
   right: 5%;
   top: 15px;
+}
+
+.itens_on_cart {
+  background-color: red;
+  border-radius: 50%;
+  color: white;
+  font-weight: 600;
+  min-width: 20px;
+  padding: 10px;
+  position: absolute;
+  right: 3%;
+  text-align: center;
+  top: 1%;
 }
