--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ body {
   float: left;
 }
 
+.botaoCarrinho {
+  margin-left: 100px;
+}
+
 .buscar {
   margin-top: 50px;
   padding:0px;
@@ -22,8 +26,13 @@ body {
 }
 
 .carrinhoCompras {
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
+}
+
+.carrinhoEContador {
+  margin-top: 55px;
+  margin-right: 100px;
 }
 
 code {
@@ -32,12 +41,61 @@ code {
 }
 
 .container-list-categories {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 440px;
+  left: 32px;
   
+}
+
+.detalhesProduto {
+  text-decoration:none; 
+  color:black;
+  border: 1px solid;
+  border-radius: 0px 5px 5px 0px;
+  padding: 4px;
+  margin: 5px;
+  background-color:rgb(226, 225, 225);
+}
+
+.detalhesProduto:hover {
+  text-decoration: underline; 
+	background-color:rgb(200, 214, 199);
+ }
+
+.detalhesProduto:active {
+  text-decoration: none
+}
+
+.footer {
+  background-image: linear-gradient(to bottom, white, rgb(57, 149, 45));
+  padding-top: 90%;
 }
 
 .header {
   font-size: 60px;
-  background-image: linear-gradient(to bottom, purple, white);
+  color:white;
+  background-image: linear-gradient(to bottom, rgb(57, 149, 45), white);
+  display: flex;
+  flex-direction: row;
+}
+
+.imgProduct {
+  width: 100px;
+  height: 100px;
+  margin-bottom: 5px;
+  border-radius: 15px;
+}
+
+.inputCheckout {
+  border: 0;
+  border-bottom: 2px solid #9e9e9e;
+  outline: none;
+  transition: .2s ease-in-out;
+  box-sizing: border-box;
+  margin: 10px;
+  padding: 5px;
 }
 
 .inputBuscar {
@@ -50,35 +108,127 @@ code {
   float: left;
 }
 
- .label-list-categories{
-   font-size: 20px;
+.inputECarrinho {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+}
 
+ .label-list-categories{
+   font-size: 18px;
+   margin: 5px;
+   padding: 3px;
+   align-items: center;
  }
+
+ .label-list-categories:hover {
+  background-image: linear-gradient(to bottom, rgb(112, 168, 104), white);
+  }
+
+.linkedins {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  overflow: hidden;
+}
+
+.linkedins p {
+  max-width: 100%;
+	-moz-transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.linkedins:hover p {
+  -moz-transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+}
 
  .listaDeProdutos {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  margin-left: 300px;
  }
 
+.logoTrybe{
+  margin-top: 70px;
+  width: 500px;
+  height: 300px;
+}
  .lupa {
   height: 40px;
  }
 
  .mensagemInicial {
    font-size: 20px;
+   font-style: italic;
+   margin: 15px;
  }
 
  .product {
    border: 1px solid;
-   background-color: #f1e9e9;
+   background-image: linear-gradient(to bottom, rgb(174, 212, 169), white);
    margin: 5px;
    padding: 10px;
    width: 270px;
-   height: 250px;
+   height: 310px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space-between;
  }
+
+ .produtoCarrinho {
+  border: 1px solid;
+  margin: 5px;
+  padding: 10px;
+  width: 90%;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+ }
+
+ .productDetails {
+  border: 1px solid;
+  margin: 5px;
+  padding: 50px;
+  margin-left: 30%;
+  margin-top: 100px;
+  display: block;
+  width: 400px;
+  align-items: center;
+  justify-content: center;
+ }
+
+.textoFreteGratis {
+  font-size: 20px;
+  color:green;
+  margin: 5px;
+  -webkit-animation: textoFreteGratis .75s linear infinite;
+   -moz-animation: textoFreteGratis .75s linear infinite;
+   -ms-animation: textoFreteGratis .75s linear infinite;
+   -o-animation: textoFreteGratis .75s linear infinite;
+   animation: textoFreteGratis .75s linear infinite;
+}
 
  .valorCarrinho {
    font-size: 30px;
    font-weight: 700;
+ }
+
+ .valorTotal {
+   font-size: 30px;
+   margin: 15px;
+ }
+
+ @keyframes textoFreteGratis {
+  0% { opacity: 1; }
+  50% { opacity: 0.5; }
+  100% { opacity: 0; }
  }
